--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "GPL-3.0",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "standard"
+    "test": "standard && mocha test/login.js"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
@@ -20,6 +20,8 @@
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
-    "standard": "^9.0.1"
+    "mocha": "^3.2.0",
+    "standard": "^9.0.1",
+    "zombie": "^5.0.5"
   }
 }
