--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   "license": "GPL-3.0",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "standard && mocha test/login.js"
+    "test": "standard 'bin/www' 'routes/**/*.js' 'test/**/*.js' && mocha test/login.js"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
     "express": "~4.14.1",
     "express-session": "^1.15.1",
     "morgan": "~1.7.0",
