--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "GPL-3.0",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "standard 'bin/www' 'routes/**/*.js' 'test/**/*.js' && mocha test/login.js"
+    "test": "standard 'bin/www' 'src/**/*.js' 'test/**/*.js' && mocha test/**/*.js"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
