--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   },
   "dependencies": {
     "body-parser": "~1.16.0",
-    "cookie-parser": "~1.4.3",
     "express": "~4.14.1",
     "express-session": "^1.15.1",
+    "http-status-codes": "^1.1.6",
     "morgan": "~1.7.0",
-    "pug": "~2.0.0-beta10",
-    "serve-favicon": "~2.3.2"
+    "pug": "~2.0.0-beta10"
   },
   "devDependencies": {
     "mocha": "^3.2.0",
